@@ -1,3 +1,10 @@
+2010-08-26  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/Makefile.in: add valgrind target
+	* unix/configure, unix/tcl.m4: SHLIB_LD_LIBS='${LIBS}' for OSF1-V*.
+	Add /usr/lib64 to set of auto-search dirs. [Bug 1230554]
+	(SC_PATH_X): Correct syntax error when xincludes not found.
+
 2010-08-25  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* doc/ttk_spinbox.n (new), doc/ttk_*.3, doc/ttk_*.n:
